Bug 354050 - Package manager list delegate pixelated with QT_DEVICE_PIXEL_RATIO=2
Summary: Package manager list delegate pixelated with QT_DEVICE_PIXEL_RATIO=2
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: muon (other bugs)
Version First Reported In: 5.4.2
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 387918 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-10-18 16:02 UTC by Kai Uwe Broulik
Modified: 2017-12-21 11:39 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Pixelated fonts (30.32 KB, image/png)
2015-10-18 16:03 UTC, Kai Uwe Broulik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2015-10-18 16:02:57 UTC
Running Muon package manager with QT_DEVICE_PIXEL_RAITO=2 leads to pixelated fonts and icons in the list delegate

Reproducible: Always

Steps to Reproduce:
1. Run QT_DEVICE_PIXEL_RATIO=2 muon
2. Observe list
3.

Actual Results:  
Fonts and icons in the list are pixelated

Expected Results:  
Fonts and icons in the list are crisp and clear
Comment 1 Kai Uwe Broulik 2015-10-18 16:03:11 UTC
Created attachment 95035 [details]
Pixelated fonts
Comment 2 Nate Graham 2017-12-15 03:14:39 UTC
*** Bug 387918 has been marked as a duplicate of this bug. ***
Comment 3 Kai Uwe Broulik 2017-12-21 11:39:15 UTC
Git commit 89ff18ae5f05b41594deae240950e3eb81db75fe by Kai Uwe Broulik.
Committed on 21/12/2017 at 11:38.
Pushed by broulik into branch 'master'.

Support high-dpi scaling in PackageDelegate

Ensures text isn't rendered blurry.

Differential Revision: https://phabricator.kde.org/D9309

M  +1    -1    CMakeLists.txt
M  +4    -1    src/PackageModel/PackageDelegate.cpp

https://commits.kde.org/muon/89ff18ae5f05b41594deae240950e3eb81db75fe