Support high-dpi scaling in PackageDelegate

Ensures text isn't rendered blurry.

BUG: 354050

Differential Revision: https://phabricator.kde.org/D9309